--- a/pom.xml
+++ b/pom.xml
@@ -30,4 +30,40 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+<!--        Para que me compile el programa-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+<!--    (Explicacion para el plugin version 2.19.1)
+        si corro por consola de maven, no sabe que es lo que quiero correr
+        por eso le agrego el siguiente plugin de maven para que detecte correctamente
+        para jenckins es ideal-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/test/java/XML/Test.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+            </plugin>
+<!--        Este plugin sirve para copiar las properties ubicado en "src/test/java/resources" al target-->
+<!--        luego poder llamarlo desde las clases tests y utilizar las properties-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.1.0</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
